syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (TokenValidationResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (TokenResponse);
  rpc GenerateToken (GenerateTokenRequest) returns (TokenResponse);
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message TokenValidationResponse {
  bool isValid = 1;
  string message = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message TokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message GenerateTokenRequest {
  string id = 1;
  string email = 2;
  string phone = 3;
  int32 role = 4;
  bool isActive = 5;

}
